...
            <RadioButton
                android:id="@+id/replace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/rename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RadioGroup>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:hintEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:selectAllOnFocus="true" />

        </android.support.design.widget.TextInputLayout>

...
