...
              android:layout_alignParentBottom="true"
              android:background="@drawable/bottom_bar_background"
              android:orientation="horizontal" >

    <ImageButton
        style="@style/BottomBarImageButton"
        android:id="@+id/button_add"
        android:onClick="handleAddButton"
        android:src="@drawable/ic_plus" />

    <ImageView
        android:id="@+id/bottom_bar_separator"
        android:layout_width="wrap_content"
...
        android:paddingTop="@dimen/activity_bottom_bar_image_view_padding_top"
        android:scaleType="fitXY"
        android:src="@drawable/bottombar_separator" />

    <ImageButton
        style="@style/BottomBarImageButton"
        android:id="@+id/button_play"
        android:onClick="handlePlayButton"
        android:src="@drawable/ic_play" />

</LinearLayout>
