...
        android:id="@+id/intro_next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:text="@string/next"
        android:textSize="@dimen/text_size_large"
        android:textColor="@color/white"
        android:background="@color/transparent"/>

    <Button
        android:id="@+id/intro_skip_button"
...
