<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Catroid: An on-device visual programming system for Android devices
  ~ Copyright (C) 2010-2018 The Catrobat Team
  ~ (<http://developer.catrobat.org/credits>)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as
  ~ published by the Free Software Foundation, either version 3 of the
  ~ License, or (at your option) any later version.
  ~
  ~ An additional term exception under section 7 of the GNU Affero
  ~ General Public License, version 3, is available at
  ~ http://developer.catrobat.org/license_additional_term
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<RadioGroup
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="@dimen/dialog_content_area_padding_top"
    android:paddingStart="@dimen/dialog_content_area_padding_input"
    android:paddingEnd="@dimen/dialog_content_area_padding_input"
    android:checkedButton="@+id/play_default_scene">

    <RadioButton
        android:id="@+id/play_default_scene"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play_scene_dialog_default" />

    <RadioButton
        android:id="@+id/play_current_scene"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play_scene_dialog_current" />
</RadioGroup>